# cuda-doom

./: .gitignore  .lvimrc  CMakeLists.txt  CODE_OF_CONDUCT.md  ChangeLog  HACKING.md  NOT-BUGS.md  PHILOSOPHY.md  README.Strife.md  README.md  TODO.md  configure.ac  magic.cmake  plans.md
derma/: CMakeLists.txt  backup_boilerplate.h  bitmanipulator.h  bytearray.h  bytetype.h  c_headers.h  common.h  cpp_headers.h  d_native.h  d_unix.h  d_windows.h  deh_context.h  deprecating_tools.h  derma_byte.h  derma_enum.h  derma_enum_free.h  derma_string.h  derma_vector.h  enumbitset.h  keybinds.h  namespace_forwards.h  namespace_fowards.h  os_native.h  os_unix.h  os_windows.h  pmrvector.h  stdafx.h  strongtype.h  test_byte.cpp  test_bytetype.cpp  txt_common.h
derma/misc/: backup_boilerplate.h  oldkeys.txt  scancodes.txt
directx/: CMakeLists.txt  DX12CudaSample.cpp  DX12CudaSample.h  DXSampleHelper.h  Main.cpp  ShaderStructs.h  Win32Application.cpp  Win32Application.h  d3dx12.h  dynlink_d3d10.h  dynlink_d3d11.h  exception.h  helper_cuda.h  helper_cuda_drvapi.h  helper_cusolver.h  helper_functions.h  helper_gl.h  helper_image.h  helper_math.h  helper_multiprocess.cpp  helper_multiprocess.h  helper_string.h  helper_timer.h  multithreading.cpp  multithreading.h  nvMath.h  nvMatrix.h  nvQuaternion.h  nvShaderUtils.h  nvVector.h  nvrtc_helper.h  param.h  paramgl.h  readme.txt  rendercheck_d3d10.cpp  rendercheck_d3d10.h  rendercheck_d3d11.cpp  rendercheck_d3d11.h  rendercheck_d3d9.cpp  rendercheck_d3d9.h  (+7 more)
directx/inc/: helper_string.h
midiproc/: CMakeLists.txt  buffer.cpp  buffer.h  main.cpp  proto.h
opl/: CMakeLists.txt  Makefile.am  ioperm_sys.cpp  ioperm_sys.h  opl.cpp  opl.h  opl3.cpp  opl3.h  opl3_channel.h  opl3_chip.h  opl3_slot.h  opl_internal.h  opl_linux.cpp  opl_obsd.cpp  opl_queue.cpp  opl_queue.h  opl_sdl.cpp  opl_sdl.h  opl_shared.h  opl_timer.cpp  opl_timer.h  opl_win32.cpp
opl/examples/: Makefile.am  droplay.cpp
pcsound/: CMakeLists.txt  pcsound.cpp  pcsound.h  pcsound_bsd.cpp  pcsound_internal.h  pcsound_linux.cpp  pcsound_sdl.cpp  pcsound_win32.cpp
src/: CMakeLists.txt  aes_prng.cpp  aes_prng.h  aes_prng_tables.cc  aes_prng_tables.h  crispy.cpp  crispy.h  d_dedicated.cpp  d_event.cpp  d_event.h  d_iwad.cpp  d_iwad.h  d_loop.cpp  d_loop.h  d_mode.cpp  d_mode.h  d_ticcmd.h  deh_context.h  deh_defs.h  deh_io.cpp  deh_io.h  deh_main.cpp  deh_main.h  deh_mapping.cpp  deh_mapping.h  deh_str.cpp  deh_str.h  deh_text.cpp  doomkeys.h  doomtype.h  gusconf.cpp  gusconf.h  i_cdmus.cpp  i_cdmus.h  i_endoom.cpp  i_endoom.h  i_glob.cpp  i_glob.h  i_input.cpp  i_input.h  (+100 more)
src/algorithms/: aes_prng.cpp  aes_prng.h  sha1.h
src/derma/: common.h  txt_common.h
src/disk_io/: d_iwad.h  d_pwad.cpp  d_pwad.h  deh_ammo.cpp  deh_bexincl.cpp  deh_bexpars.cpp  deh_bexpars.h  deh_bexptr.cpp  deh_bexstr.cpp  deh_cheat.cpp  deh_defs.h  deh_doom.cpp  deh_frame.cpp  deh_io.cpp  deh_io.h  deh_main.cpp  deh_main.h  deh_mapping.cpp  deh_mapping.h  deh_misc.cpp  deh_misc.h  deh_ptr.cpp  deh_sound.cpp  deh_str.cpp  deh_str.h  deh_text.cpp  deh_thing.cpp  deh_weapon.cpp  v_diskicon.cpp  v_diskicon.h  w_checksum.cpp  w_checksum.h  w_file.cpp  w_file.h  w_file_posix.cpp  w_file_stdc.cpp  w_file_win32.cpp  w_main.cpp  w_main.h  w_merge.cpp  (+3 more)
src/doom/: CMakeLists.txt  am_map.cpp  am_map.h  d_english.h  d_englsh.h  d_items.cpp  d_items.h  d_main.cpp  d_main.h  d_net.cpp  d_player.h  d_pwad.cpp  d_pwad.h  d_textur.h  d_think.h  deh_ammo.cpp  deh_bexincl.cpp  deh_bexpars.cpp  deh_bexpars.h  deh_bexptr.cpp  deh_bexstr.cpp  deh_cheat.cpp  deh_doom.cpp  deh_frame.cpp  deh_misc.cpp  deh_misc.h  deh_ptr.cpp  deh_sound.cpp  deh_thing.cpp  deh_weapon.cpp  doom.cpp  doom.h  doom_engine.h  doom_includes.h  doomdata.h  doomdef.cpp  doomdef.h  doomstat.cpp  doomstat.h  dstrings.cpp  (+90 more)
src/heretic/: CMakeLists.txt  am_data.h  am_map.cpp  am_map.h  ct_chat.cpp  ct_chat.h  d_main.cpp  d_net.cpp  deh_ammo.cpp  deh_frame.cpp  deh_htext.cpp  deh_htic.cpp  deh_htic.h  deh_sound.cpp  deh_thing.cpp  deh_weapon.cpp  doomdata.h  doomdef.h  dstrings.h  f_finale.cpp  g_game.cpp  in_lude.cpp  info.cpp  info.h  m_random.cpp  m_random.h  mn_menu.cpp  p_action.h  p_ceilng.cpp  p_doors.cpp  p_enemy.cpp  p_floor.cpp  p_inter.cpp  p_lights.cpp  p_local.h  p_map.cpp  p_maputl.cpp  p_mobj.cpp  p_plats.cpp  p_pspr.cpp  (+22 more)
src/hexen/: CMakeLists.txt  a_action.cpp  am_data.h  am_map.cpp  am_map.h  ct_chat.cpp  ct_chat.h  d_net.cpp  f_finale.cpp  g_game.cpp  h2_main.cpp  h2def.h  in_lude.cpp  info.cpp  info.h  m_random.cpp  m_random.h  mn_menu.cpp  p_acs.cpp  p_anim.cpp  p_ceilng.cpp  p_doors.cpp  p_enemy.cpp  p_floor.cpp  p_inter.cpp  p_lights.cpp  p_local.h  p_map.cpp  p_maputl.cpp  p_mobj.cpp  p_plats.cpp  p_pspr.cpp  p_setup.cpp  p_sight.cpp  p_spec.cpp  p_spec.h  p_switch.cpp  p_telept.cpp  p_things.cpp  p_tick.cpp  (+22 more)
src/input/: d_ticcmd.h  i_input.h  i_joystick.cpp  m_controls.h
src/network/: CMakeLists.txt  d_dedicated.cpp  net_client.cpp  net_client.h  net_common.cpp  net_common.h  net_dedicated.cpp  net_dedicated.h  net_defs.h  net_gui.cpp  net_gui.h  net_io.cpp  net_io.h  net_loop.cpp  net_loop.h  net_packet.cpp  net_packet.h  net_petname.cpp  net_petname.h  net_query.cpp  net_query.h  net_sdl.cpp  net_sdl.h  net_server.cpp  net_server.h  net_structrw.cpp  net_structrw.h
src/setup/: CMakeLists.txt  compatibility.cpp  compatibility.h  display.cpp  display.h  execute.cpp  execute.h  joystick.cpp  joystick.h  (+24 more)
textscreen/: CMakeLists.txt  textscreen.cpp  textscreen.h  textscreen.ixx  txt_button.cpp  txt_button.h  txt_button.ixx  txt_callback.h  txt_checkbox.cpp  txt_checkbox.h  txt_checkbox.ixx  txt_common.h  txt_conditional.cpp  txt_conditional.h  txt_conditional.ixx  txt_defines.h  txt_desktop.cpp  txt_desktop.h  txt_desktop.ixx  txt_dropdown.cpp  txt_dropdown.h  txt_dropdown.ixx  txt_enums.h  txt_enums.ixx  txt_fileselect.cpp  txt_fileselect.h  txt_fileselect.ixx  txt_gui.cpp  txt_gui.h  txt_gui.ixx  txt_inputbox.cpp  txt_inputbox.h  txt_inputbox.ixx  txt_io.cpp  txt_io.h  txt_io.ixx  txt_label.cpp  txt_label.h  txt_label.ixx  txt_main.h  (+34 more)
(+195 files in other folders)
